2012-05-21 11:39  paddockd

	* [r332] ChangeLog, contrib/makefile.linux24-nofpu-alsa-display,
	  contrib/makefile.linux26-mipsel-nofpu-alsa,
	  contrib/makefile.linux26-mipsel-nofpu-oss,
	  contrib/makefile.linux26-nofpu-alsa-display,
	  makefile.linux22-empeg, src/squeezeslave/squeezeslave.c: Updated
	  remaining nofpu builds to tremor-r18153 and libogg-1.2.2.
	  Increased revision to 332.

2012-05-20 21:27  paddockd

	* [r331] contrib/makefile.freebsd-i386,
	  contrib/makefile.freebsd-sparc64,
	  contrib/makefile.linux24-ffmpeg-alsa-display,
	  contrib/makefile.linux24-nofpu-alsa-display,
	  contrib/makefile.linux26-armel-alsa,
	  contrib/makefile.linux26-ffmpeg-alsa-display,
	  contrib/makefile.linux26-mipsel-nofpu-alsa,
	  contrib/makefile.linux26-nofpu-alsa-display,
	  contrib/makefile.linux26-ppc-alsa-display,
	  makefile.linux24-alsa-display, makefile.linux26-alsa-display,
	  makefile.linux26-armel-alsa-display,
	  makefile.linux26-i64-alsa-display, makefile.osx-i64-display,
	  makefile.osx-intel-display, makefile.osx-ppc-display,
	  makefile.windows-display, sources/portaudio-r1834.tar.gz,
	  src/squeezeslave/squeezeslave.c: Updated libportaudio to r1834 to
	  fix invalid sample rate error on device open for inexactly
	  clocked sound cards.
	  Allows a 1% deviation from 44100Hz rate.
	  Removed patch to allow portaudio to compile with older ALSA
	  versions as r1834 includes the fix.
	  Increased revision to 331.

2012-05-20 20:59  paddockd

	* [r330] ChangeLog, contrib/makefile.freebsd-i386,
	  contrib/makefile.freebsd-sparc64,
	  contrib/makefile.linux24-ffmpeg-alsa-display,
	  contrib/makefile.linux26-armel-alsa,
	  contrib/makefile.linux26-armel-oss,
	  contrib/makefile.linux26-ffmpeg-alsa-display,
	  contrib/makefile.linux26-mipsel-oss,
	  contrib/makefile.linux26-ppc-alsa-display,
	  contrib/makefile.mingw32-ffmpeg-display,
	  contrib/makefile.mingw32-pa-display,
	  deprecated/makefile.mingw32-asio-display,
	  deprecated/makefile.mingw32-display,