@@ -19,7 +19,7 @@ LIBVORBIS=tremor-r18153
 
 # Tremor fixed point ogg decoder
 INCLUDE+=-Ilib/vorbis/$(OS)/include
-CFLAGS+=-DNO_FPU
+CFLAGS+=-DTREMOR_DECODER
 SUPPORTLIBS:=lib/vorbis/$(OS)/lib/libvorbisidec.a
 
 # Vorbis floating point ogg decoder
@@ -37,7 +37,6 @@ SQUEEZESLAVEFILES:=src/squeezeslave/squeezeslave.c src/squeezeslave/help.c src/s
 
 LIBSLIMPROTO=lib/libslimproto.a
 
-
 SQUEEZESLAVE=bin/squeezeslave
 
 .c.o:
@@ -52,7 +51,6 @@ lib/vorbis/$(OS)/lib/libvorbisidec.a:
 	cd lib/vorbis/$(OS)/build/$(LIBVORBIS) && make clean && make
 	$(CP) -p lib/vorbis/$(OS)/build/$(LIBVORBIS)/.libs/libvorbisidec.a lib/vorbis/$(OS)/lib
 	$(CP) -p lib/vorbis/$(OS)/build/$(LIBVORBIS)/{ivorbiscodec.h,ivorbisfile.h,config_types.h} lib/vorbis/$(OS)/include/vorbis
-	cd lib/vorbis/$(OS)/include/vorbis; ln -s ivorbisfile.h vorbisfile.h
 
 $(LIBPORTAUDIO): $(PORTAUDIOFILES:.c=.o)
 	ar cru $(LIBPORTAUDIO) $^
@@ -78,5 +76,5 @@ clean:
 realclean: clean
 	-@rm -rf lib/vorbis/$(OS)/build/$(LIBVORBIS)
 	-@rm -f lib/vorbis/$(OS)/lib/libvorbisidec.a
-	-@rm -f lib/vorbis/$(OS)/include/vorbis/{vorbisfile.h,ivorbiscodec.h,ivorbisfile.h,config_types.h}
+	-@rm -f lib/vorbis/$(OS)/include/vorbis/{ivorbiscodec.h,ivorbisfile.h,config_types.h}
 
