@@ -12,7 +12,7 @@ CXX=g++
 TAR=tar
 SED=sed
 PATCH=patch
-CFLAGS=-DZONES -DRENICE -DSLIMPROTO_DEBUG -DINTERACTIVE -DPORTAUDIO_DEV -DNO_FPU -DPADEV_ASIO -DPADEV_WASAPI -DPTW32_STATIC_LIB -D_WIN32_WINNT=0x0501 -DWINVER=0x0501 -Wall -O2 -mno-cygwin -march=i686 -mtune=pentium4
+CFLAGS=-DZONES -DRENICE -DSLIMPROTO_DEBUG -DINTERACTIVE -DPORTAUDIO_DEV -DTREMOR_DECODER -DPADEV_ASIO -DPADEV_WASAPI -DPTW32_STATIC_LIB -D_WIN32_WINNT=0x0501 -DWINVER=0x0501 -Wall -O2 -mno-cygwin -march=i686 -mtune=pentium4
 LDFLAGS=-s
 
 INCLUDE=-Ilib/dxsdk/$(OS)/include -Ilib/pthread/$(OS)/include -Ilib/getopt -Ilib/libportaudio/$(OS)/include -Ilib/portmixer/px_common -Isrc -Ilib/libmad/$(OS)/include -Ilib/vorbis/$(OS)/include -Ilib/flac/$(OS)/include -Ilib/curses/$(OS)/include -Ilib/lirc/$(OS)/include
@@ -103,7 +103,6 @@ lib/vorbis/$(OS)/lib/libvorbisidec.a: lib/vorbis/$(OS)/lib/libogg.a
 	cd lib/vorbis/$(OS)/build/$(LIBVORBIS) && make clean && make
 	cp -p lib/vorbis/$(OS)/build/$(LIBVORBIS)/.libs/libvorbisidec.a lib/vorbis/$(OS)/lib
 	cp -p lib/vorbis/$(OS)/build/$(LIBVORBIS)/{ivorbiscodec.h,ivorbisfile.h,config_types.h} lib/vorbis/$(OS)/include/vorbis
-	cd lib/vorbis/$(OS)/include/vorbis; ln -s ivorbisfile.h vorbisfile.h
 
 lib/flac/$(OS)/lib/libFLAC.a: lib/vorbis/$(OS)/lib/libogg.a
 	cd lib/flac/$(OS)/build && ${TAR} --bzip -xf ../../../../sources/$(LIBFLAC).tar.bz2
@@ -166,7 +165,7 @@ realclean: clean
 	-@rm -f lib/libmad/$(OS)/lib/libmad.a lib/libmad/$(OS)/include/mad.h
 	-@rm -f lib/vorbis/$(OS)/lib/libogg.a lib/vorbis/$(OS)/include/ogg/{ogg.h,os_types.h,config_types.h}
 	-@rm -f lib/vorbis/$(OS)/lib/libvorbisidec.a
-	-@rm -f lib/vorbis/$(OS)/include/vorbis/{vorbisfile.h,ivorbiscodec.h,ivorbisfile.h,config_types.h}
+	-@rm -f lib/vorbis/$(OS)/include/vorbis/{ivorbiscodec.h,ivorbisfile.h,config_types.h}
 	-@rm -f lib/flac/$(OS)/lib/libFLAC.a
 	-@rm -f lib/flac/$(OS)/include/FLAC/{all.h,export.h,ordinals.h,assert.h,format.h,stream_decoder.h,callback.h,metadata.h,stream_encoder.h}
 	-@rm -f lib/pthread/$(OS)/lib/libpthreadGC2.a lib/pthread/$(OS)/include/{semaphore.h,pthread.h,sched.h}
